# yalg

./: CMakeLists.txt  README.md
include/yalg/: global.h  global.hpp  lexer.h  lexer.hpp  parser.h  yalg.h
src/: lexer.c  main.c
test/: CMakeLists.txt  lexer.c
